Fix nested trigger_jobs
After upgrading to JJB 2.2.0 any nested parameters
up to 3 levels will be reported as a failure. 
We need to fix those so that there is only 2
levels maximum.
Committing this as a single patch since our verify
job is broken.

Issue-ID: CIMAN-184
Change-Id: I460f714b2f66cc8ac4df978d9293c932aa743574
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vfc/vfc-nfvo-wfengine-csit.yaml
+++ b/jjb/vfc/vfc-nfvo-wfengine-csit.yaml
@@ -7,9 +7,9 @@
     project-name: 'vfc-nfvo-wfengine'
     stream: 'master'
     functionality:
-      - 'sanity-check':
-          trigger_jobs:
-            - 'vfc-nfvo-wfengine-master-engine-activiti-extension-docker-java-version-shell-daily'
-            - 'vfc-nfvo-wfengine-master-engine-mgr-service-docker-java-version-shell-daily'
+      - 'sanity-check'
+    trigger_jobs:
+      - 'vfc-nfvo-wfengine-master-engine-activiti-extension-docker-java-version-shell-daily'
+      - 'vfc-nfvo-wfengine-master-engine-mgr-service-docker-java-version-shell-daily'
     robot-options: ''
     branch: 'master'
