--- a/jjb/dcaegen2/dcaegen2-csit.yaml
+++ b/jjb/dcaegen2/dcaegen2-csit.yaml
@@ -1,5 +1,5 @@
 - project:
-    name: dcaegen2-csit
+    name: dcaegen2-testsuites-csit
     jobs:
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
@@ -8,12 +8,23 @@
       - 'master':
           branch: 'master'
     functionality:
-      - 'testsuites':
-          trigger_jobs:
-            - 'dcaegen2-master-merge-java'
-            - 'dcaegen2-collectors-ves-master-merge-java'
-      - 'prh-testsuites':
-          trigger_jobs:
-            - 'dcaegen2-master-merge-java'
-            - 'dcaegen2-services-prh-master-merge-java'
+      - 'testsuites'
+    trigger_jobs:
+      - 'dcaegen2-master-merge-java'
+      - 'dcaegen2-collectors-ves-master-merge-java'
+    robot-options: ''
+- project:
+    name: dcaegen2-prh-testsuites-csit
+    jobs:
+      - '{project-name}-{stream}-verify-csit-{functionality}'
+      - '{project-name}-{stream}-csit-{functionality}'
+    project-name: 'dcaegen2'
+    stream:
+      - 'master':
+          branch: 'master'
+    functionality:
+      - 'prh-testsuites'
+    trigger_jobs:
+      - 'dcaegen2-master-merge-java'
+      - 'dcaegen2-services-prh-master-merge-java'
     robot-options: ''
