Fix nested trigger_jobs (A)
After upgrading to JJB 2.2.0 any nested parameters
up to 3 levels will be reported as a failure.
We need to fix those so that there is only 2
levels maximum.
Committing this as a single patch since our verify
job is broken.

Issue-ID: CIMAN-184
Change-Id: I9e0e245109af786345802caee2f6f26126f550d4
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/aai/aai-csit.yaml
+++ b/jjb/aai/aai-csit.yaml
@@ -12,13 +12,10 @@
           branch: beijing
     functionality:
       - 'resources':
-          trigger_jobs:
-            - 'aai-resources-{stream}-aai-docker-java-daily'
+          trigger_jobs: 'aai-resources-{stream}-aai-docker-java-daily'
       - 'traversal':
-          trigger_jobs:
-            - 'aai-traversal-{stream}-aai-docker-java-daily'
+          trigger_jobs: 'aai-traversal-{stream}-aai-docker-java-daily'
       - 'esr-server':
-          trigger_jobs:
-            - 'aai-esr-server-{stream}-docker-java-daily'
+          trigger_jobs: 'aai-esr-server-{stream}-docker-java-daily'
     robot-options: ''
 
