Fix nested trigger_jobs (M)
After upgrading to JJB 2.2.0 any nested parameters
up to 3 levels will be reported as a failure.
We need to fix those so that there is only 2
levels maximum.
Committing this as a single patch since our verify
job is broken.

Change-Id: I17cb960bd182c45b8921855f699a0777882fd154
Issue-ID: CIMAN-184
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/multicloud/multicloud-openstack-pike-csit.yaml
+++ b/jjb/multicloud/multicloud-openstack-pike-csit.yaml
@@ -8,7 +8,6 @@
     stream: 'master'
     functionality:
       - 'functionality1':
-          trigger_jobs:
-            - 'multicloud-openstack-master-docker-java-version-shell-daily'
+          trigger_jobs: 'multicloud-openstack-master-docker-java-version-shell-daily'
     robot-options: ''
     branch: 'master'
