Fix nested trigger_jobs (O-S)
After upgrading to JJB 2.2.0 any nested parameters
up to 3 levels will be reported as a failure.
We need to fix those so that there is only 2
levels maximum.

Change-Id: Icb86bc28bb66727737568386f0258d5d570c1fc7
Issue-ID: CIMAN-184
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/policy/policy-csit.yaml
+++ b/jjb/policy/policy-csit.yaml
@@ -1,18 +1,30 @@
 - project:
-    name: policy-csit
+    name: policy-health-csit
     jobs:
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'policy'
     stream: 'master'
     functionality:
-      - 'health':
-          trigger_jobs:
-            - 'policy-engine-{stream}-merge-scm-mvn-script'
-            - 'policy-drools-pdp-{stream}-merge-scm-mvn-script'
-            - 'policy-drools-applications-{stream}-merge-java'
-      - 'apex-pdp':
-          trigger_jobs:
-            - 'policy-apex-pdp-{stream}-merge-scm-mvn-script'
+      - 'health'
+    trigger_jobs:
+      - 'policy-engine-{stream}-merge-scm-mvn-script'
+      - 'policy-drools-pdp-{stream}-merge-scm-mvn-script'
+      - 'policy-drools-applications-{stream}-merge-java'
     robot-options: ''
     branch: 'master'
+
+- project:
+    name: policy-apex-pdp-csit
+    jobs:
+      - '{project-name}-{stream}-verify-csit-{functionality}'
+      - '{project-name}-{stream}-csit-{functionality}'
+    project-name: 'policy'
+    stream: 'master'
+    functionality:
+      - 'apex-pdp'
+    trigger_jobs:
+      - 'policy-apex-pdp-{stream}-merge-scm-mvn-script'
+    robot-options: ''
+    branch: 'master'
+
