--- a/jjb/ci-management/ci-management-packer-jobs.yaml
+++ b/jjb/ci-management/ci-management-packer-jobs.yaml
@@ -14,7 +14,9 @@
 
     platforms:
       - centos-7
+      - centos-7-arm64
       - ubuntu-16.04
+      - ubuntu-18.04-arm64
     templates: builder
 
 - project:
@@ -32,7 +34,9 @@
 
     platforms:
       - centos-7
+      - centos-7-arm64
       - ubuntu-16.04
+      - ubuntu-18.04-arm64
     templates: docker
 
 - project:
