Add ARM platforms in packer
Add ARM plaforms for builder and docker
packer jobs.

Change-Id: I9fbf73ed981e4ea294daf4c861bd20154c05fca2
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/ci-management/ci-management-packer-jobs.yaml
+++ b/jjb/ci-management/ci-management-packer-jobs.yaml
@@ -14,6 +14,7 @@
 
     platforms:
       - centos-7
+      - centos-7-arm64
       - ubuntu-16.04
     templates: builder
 
@@ -32,6 +33,7 @@
 
     platforms:
       - centos-7
+      - centos-7-arm64
       - ubuntu-16.04
     templates: docker
 
