Docker Job template for python
Created a new Docker Job template for python projects.
Used by optf-osdf and optf-has projects to build and push docker images.
Builds the docker images from script.

Change-Id: I735034d022981d2bb89db8994d1c995efa428919
Issue-ID: OPTFRA-287
Signed-off-by: Dileep Ranganathan <dileep.ranganathan@intel.com>

--- a/jjb/optf/optf-has.yaml
+++ b/jjb/optf/optf-has.yaml
@@ -21,7 +21,7 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
-      - '{project-name}-{stream}-{subproject}-docker-java-version-shell-daily':
+      - '{project-name}-{stream}-{subproject}-docker-shell-daily':
           docker-pom: 'pom.xml'
           mvn-goals: 'install'
           script:
