--- a/jjb/global-templates-python.yaml
+++ b/jjb/global-templates-python.yaml
@@ -214,3 +214,73 @@
     publishers:
       - infra-shiplogs:
           maven-version: '{maven-version}'
+
+- job-template:
+    # Job template for docker daily jobs
+    #
+    # The purpose of this job template is to run:
+    # 1. inject a version properties file
+    # 2. login into the docker registry
+    # 4. run a specified shell script
+    #
+    # Required Variables:
+    #     branch:    git branch (eg. beijing or master)
+
+    name: '{project-name}-{stream}-{subproject}-docker-shell-daily'
+    project-type: freestyle
+    node: 'queue-docker-4c-4g'
+
+    properties:
+      - infra-properties:
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - infra-parameters:
+          project: '{project}'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - maven-exec:
+          maven-version: '{maven-version}'
+
+    scm:
+      - gerrit-trigger-scm:
+          refspec: ''
+          choosing-strategy: 'default'
+          submodule-recursive: '{submodule-recursive}'
+
+    wrappers:
+      - infra-wrappers-docker-build:
+          build-timeout: '{build-timeout}'
+
+    triggers:
+      # 12 AM UTC
+      - timed: 'H 12 * * *'
+      - gerrit-trigger-release-manually:
+          server: '{server-name}'
+          project: '{project}'
+          branch: '{branch}'
+      - gerrit-trigger-patch-merged:
+          server: '{server-name}'
+          project: '{project}'
+          branch: '{branch}'
+          files: '**'
+
+    builders:
+      - provide-maven-settings:
+          global-settings-file: 'global-settings'
+          settings-file: '{mvn-settings}'
+      - inject:
+          properties-file: version.properties
+      - docker-login
+      - maven-target:
+          maven-version: '{maven-version}'
+          goals: '{mvn-goals}'
+          settings: '{mvn-settings}'
+          settings-type: cfp
+          global-settings: 'global-settings'
+          global-settings-type: cfp
+      - shell: '{script}'
+    publishers:
+      - infra-shiplogs:
+          maven-version: '{maven-version}'
