Docker jobs for OOF with dedicated node.
Used by optf-osdf and optf-has projects to build and push docker images.
Builds the docker images from script.
Uses dedicated docker build node.

Change-Id: I735034d022981d2bb89db8994d1c995efa428919
Issue-ID: OPTFRA-287
Signed-off-by: Dileep Ranganathan <dileep.ranganathan@intel.com>

--- a/jjb/optf/optf-osdf.yaml
+++ b/jjb/optf/optf-osdf.yaml
@@ -20,14 +20,39 @@
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
-      - '{project-name}-{stream}-{subproject}-docker-java-version-shell-daily':
-          docker-pom: 'pom.xml'
-          mvn-goals: 'install'
-          script:
-            !include-raw-escape: 'build-optf-osdf-docker-image.sh'
     files: '**'
     archive-artifacts: ''
     build-node: 'ubuntu1604-builder-4c-4g'
+
+- project:
+    name: optf-osdf-docker
+    project-name: 'optf-osdf'
+    project: 'optf/osdf'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
+    mvn-settings: 'optf-osdf-settings'
+    subproject:
+      - 'osdf':
+          path: '.'
+          pattern: '**'
+          pom: 'pom.xml'
+    jobs:
+      - '{project-name}-{stream}-{subproject}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          mvn-params: '-Dmaven.test.skip=true'
+          script:
+            !include-raw-escape: 'build-optf-osdf-docker-image.sh'
+      - '{project-name}-{stream}-{subproject}-docker-java-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          mvn-params: '-Dmaven.test.skip=true'
+          script:
+            !include-raw-escape: 'build-optf-osdf-docker-image.sh'
+          build-node: queue-docker-4c-4g
 
 - project:
     name: optf-osdf-sonar
