--- a/jjb/optf/optf-has.yaml
+++ b/jjb/optf/optf-has.yaml
@@ -21,14 +21,39 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
-      - '{project-name}-{stream}-{subproject}-docker-java-version-shell-daily':
-          docker-pom: 'pom.xml'
-          mvn-goals: 'install'
-          script:
-            !include-raw-escape: 'build-optf-has-docker-image.sh'
     files: '**'
     archive-artifacts: ''
     build-node: 'ubuntu1604-builder-4c-4g'
+
+- project:
+    name: optf-has-docker
+    project-name: 'optf-has'
+    project: 'optf/has'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'beijing':
+          branch: 'beijing'
+    mvn-settings: 'optf-has-settings'
+    subproject:
+      - 'conductor':
+          path: 'conductor'
+          pattern: 'conductor/**'
+          pom: 'pom.xml'
+    jobs:
+      - '{project-name}-{stream}-{subproject}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          mvn-params: '-Dmaven.test.skip=true'
+          script:
+            !include-raw-escape: 'build-optf-has-docker-image.sh'
+      - '{project-name}-{stream}-{subproject}-docker-java-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          mvn-params: '-Dmaven.test.skip=true'
+          script:
+            !include-raw-escape: 'build-optf-has-docker-image.sh'
+          build-node: queue-docker-4c-4g
 
 - project:
     name: optf-has-sonar
