change the plugin build environment
The repo affected: ccsdk/plateform/plugins, the helm plugin is platform sensitive, the helm plugin which build on Ubuntu cannot be loaded to centos Cloudify manager. 

Change-Id: I2199dac7c6a453d1715282c3e6820d127924073d
Issue-ID: CIMAN-185
Signed-off-by: Hong Guan <hg4105@att.com>

--- a/jjb/ccsdk/platform-plugins.yaml
+++ b/jjb/ccsdk/platform-plugins.yaml
@@ -20,13 +20,14 @@
       deployAtEnd=true
     files: '**'
     archive-artifacts: ''
+    build-node: centos7-redis-4c-4g
 
 - project:
     name: ccsdk-platform-plugins-sonar
     jobs:
       - gerrit-maven-sonar
     cron: 'H 11 * * *'
-    build-node: ubuntu1604-builder-4c-4g
+    build-node: centos7-redis-4c-4g
     project: 'ccsdk/platform/plugins'
     project-name: 'ccsdk-platform-plugins'
     branch: 'master'
