Refactor java verify jobs
Change-Id: Iecf1891cfa85d056f62fc8b842a901da1de0dee1
Issue-ID: CIMAN-187
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/dcaegen2/apod-analytics.yaml
+++ b/jjb/dcaegen2/apod-analytics.yaml
@@ -20,10 +20,9 @@
     jobs:
       - gerrit-maven-clm
       - '{project-name}-{stream}-release-version-java-daily'
-      - '{project-name}-{stream}-verify-java-skip-tests':
-          mvn-goals: 'clean install'
-      - '{project-name}-{stream}-merge-java':
-          mvn-goals: 'clean deploy'
+      - '{project-name}-{stream}-verify-java':
+          mvn-params: '-DskipTests=true'
+      - '{project-name}-{stream}-merge-java'
 
 - project:
     name: dcaegen2-analytics-tca-sonar
