--- a/jjb/sdnc/sdnc-plugins.yaml
+++ b/jjb/sdnc/sdnc-plugins.yaml
@@ -4,7 +4,8 @@
     project-name: 'sdnc-plugins'
     jobs:
       - gerrit-maven-clm
-      - '{project-name}-{stream}-verify-java-skip-tests'
+      - '{project-name}-{stream}-verify-java':
+          mvn-params: '-DskipTests=true'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
 
