Refactor java jobs
Change-Id: I33de2951f249c5d5816c2b2ab1512c0c5b0c5b4f
Issue-ID: CIMAN-187
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-root.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-root.yaml
@@ -13,8 +13,8 @@
           mvn-params: '-P rootOnly'
           pattern: 'pom.xml'
       - '{project-name}-{stream}-merge-profile-java':
-            build-node: ubuntu1604-docker-8c-8g
+          build-node: ubuntu1604-docker-8c-8g
+          pattern: 'pom.xml'
       - '{project-name}-{stream}-release-version-profile-java-daily'
-    files: 'pom.xml'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
