Refactor docker java jobs
Remove some more unused docker java jobs and
refactor the rest.

Change-Id: I0c570f3b739cc8a1f7117846201b810b26df7172
Issue-ID: CIMAN-187
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/aai/aai-csit.yaml
+++ b/jjb/aai/aai-csit.yaml
@@ -13,10 +13,10 @@
     functionality:
       - 'resources':
           trigger_jobs:
-            - 'aai-resources-{stream}-aai-docker-java-version-daily'
+            - 'aai-resources-{stream}-aai-docker-java-daily'
       - 'traversal':
           trigger_jobs:
-            - 'aai-traversal-{stream}-aai-docker-java-version-daily'
+            - 'aai-traversal-{stream}-aai-docker-java-daily'
       - 'esr-server':
           trigger_jobs:
             - 'aai-esr-server-{stream}-docker-java-daily'
