Make build-node configurable
{project-name}-{stream}-docker-java-shell-daily job
needs to have the build-node parameter configurable.
This way, the projects will be able to select the
long live instance as build-node for their job.

For the rest of the projects using this template, the
build-node variable is set to the previous default
value.

Change-Id: Ie3722050870a04b0c2ca3108f6b526c7ac855def
Issue-ID: CIMAN-188
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/aaf/aaf-authz.yaml
+++ b/jjb/aaf/aaf-authz.yaml
@@ -12,6 +12,7 @@
           settings: '{mvn-settings}'
           script:
             !include-raw-escape: 'build-aaf-docker-image.sh'
+          build-node: 'ubuntu1604-docker-8c-8g'
     project: 'aaf/authz'
     stream:
       - 'master':
