--- a/jjb/dmaap/dmaap-datarouter.yaml
+++ b/jjb/dmaap/dmaap-datarouter.yaml
@@ -14,6 +14,7 @@
           mvn-goals: 'clean package -P docker docker:build -DpushImage'
           # No-op
           script: '/bin/true'
+          build-node: 'ubuntu1604-docker-8c-8g'
 
     project: 'dmaap/datarouter'
     stream:
