--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -925,7 +925,7 @@
 
     name: '{project-name}-{stream}-docker-java-shell-daily'
     project-type: freestyle
-    node: 'ubuntu1604-docker-8c-8g'
+    node: '{build-node}'
     disabled: '{disabled}'
     properties:
       - infra-properties:
