--- a/jjb/optf/optf-osdf.yaml
+++ b/jjb/optf/optf-osdf.yaml
@@ -1,7 +1,7 @@
 ---
 - project:
     name: optf-osdf
-    project-name: 'optf-osdf'
+    project-name: 'jess-optf-osdf'
     project: 'optf/osdf'
     stream:
       - 'master':
@@ -20,11 +20,12 @@
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
-      - '{project-name}-{stream}-{subproject}-docker-java-version-shell-daily':
+      - '{project-name}-{stream}-docker-java-shell-daily':
           docker-pom: 'pom.xml'
           mvn-goals: 'install'
           script:
             !include-raw-escape: 'build-optf-osdf-docker-image.sh'
+          build-node: 'queue-docker-4c-4g'
     files: '**'
     archive-artifacts: ''
     build-node: 'ubuntu1604-builder-4c-4g'
