Add missing build nodes for OOF jobs
Change-Id: I6ee058624712a01ad1b57d7c0bc4e532c4d11218
Issue-ID: OPTFRA-287
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/optf/optf-has.yaml
+++ b/jjb/optf/optf-has.yaml
@@ -47,6 +47,7 @@
           mvn-params: '-Dmaven.test.skip=true'
           script:
             !include-raw-escape: 'build-optf-has-docker-image.sh'
+          build-node: queue-docker-4c-4g
       - '{project-name}-{stream}-{subproject}-docker-java-shell-daily':
           docker-pom: 'pom.xml'
           mvn-goals: 'install'
