Install libxml2-utils for docker
Add libxml2-utils used by OOF team for
docker images

Change-Id: Ib28e415107b02bef9d329c2ba6ff7284d15391c2
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -32,3 +32,9 @@
         - name: 'Add golang to PATH'
           command: 'echo "export PATH=$PATH:/usr/local/go/bin" >> /etc/profile'
           become: true
+
+    - name: Install libxml2-utils
+      apt:
+        name: libxml2-utils
+        state: present
+      become: true
