Install Chrome on docker images
Add Chrome install role for docker images.
Used by CSIT jobs.

Change-Id: I79643d05bb2c72db5e6b54c93699c6befb499984
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -38,3 +38,22 @@
         name: libxml2-utils
         state: present
       become: true
+
+    - name: Add Google Chrome key
+      shell: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+      when: google_apt_exists.rc == 1
+      become: true
+
+    - name: Add Google Chrome repo
+      copy: content="deb http://dl.google.com/linux/chrome/deb/ stable main" dest={{apt_file}} owner=root group=root mode=644
+      when: google_apt_exists.rc == 1
+      become: true
+
+    - name: Update apt cache
+      apt: update_cache=yes
+      when: google_apt_exists.rc == 1
+      become: true
+
+    - name: Install Google Chrome
+      apt: pkg=google-chrome-stable state=installed
+      become: true
