Add mvn-goals for docker-java-daily job
Change-Id: I06e602b19b1cb466264f4168224da20c8e0ccc7d
Issue-ID: CIMAN-169
Signed-off-by: Prudence Au <prudence.au@amdocs.com>

--- a/jjb/logging-analytics/logging-analytics-pomba-pomba-context-aggregator.yaml
+++ b/jjb/logging-analytics/logging-analytics-pomba-pomba-context-aggregator.yaml
@@ -9,7 +9,7 @@
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-docker-java-daily':
           docker-pom: 'pom.xml'
-          mvn-profile: 'docker'
+          mvn-goals: 'docker:build'
           mvn-params: '-Dmaven.test.skip=true'
     project: logging-analytics/pomba/pomba-context-aggregator
     stream:
