Install python-tox for docker
Change-Id: Ia05719ee7994b858a4c29ffc63d60fdafa600b42
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -38,3 +38,9 @@
         name: libxml2-utils
         state: present
       become: true
+
+    - name: Install python-tox
+      apt:
+        name: python-tox
+        state: present
+      become: true
