Add node support packages
Add support packages for projects building docker images
and maven autoreleases.
These packages are brought up from the old packer scripts.

Change-Id: Id3383b81b17a161b7604ba953b7eaf2b5cd4d1f8
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -65,3 +65,39 @@
           - libmysqlclient-dev
           - gcc
       become: true
+
+    - name: Install base packages
+      apt:
+        name:
+          - unzip
+          - xz-utils
+          - libxml-xpath-perl
+          - wget
+          - make
+          - npm
+          - sshuttle
+          - netcat
+          - libssl-dev
+          - libffi-dev
+      become: true
+
+    - name: Install autorelease support packages
+      apt:
+        name:
+          - firefox
+          - xmlstarlet
+          - xvfb
+          - crudini
+          - maven
+          - python-ncclient
+      become: true
+
+    - name: Install python-ncclient support packages
+      apt:
+        name:
+          - libxml2
+          - libxslt
+          - libxslt-devel
+          - libffi
+          - libffi-devel
+      become: true
