Make docker-compose executable
Change-Id: I68c69c2473ab6175ecb9e4d9804a6d2086e97efc
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -16,6 +16,10 @@
       command: curl -o /usr/local/bin/docker-compose -L "https://github.com/docker/compose/releases/download/{{docker_compose_version}}/docker-compose-$(uname -s)-$(uname -m)"
       become: true
 
+    - file:
+        path: /usr/local/bin/docker-compose
+        mode: "+x"
+
     - name: 'Install GoLang {{golang_version}}'
       block:
         - name: 'Fetch golang {{golang_version}} to /tmp/go{{golang_version}}.linux-amd64.tar.gz'
