Update SDC sonar jjb
Removed old style Jave memory definitions.

add sonar branch name property to be passed to the maven on execution.
add the use of the GERRIT_BRANCH env variable, to allow differentiation of what branch the sonar run on.

Change-Id: Ia996bb8e925461c3fa5af6c1ff40a0371faa9123
Issue-ID: SDC-1632
Signed-off-by: Michael Lando <ml636r@att.com>

--- a/jjb/sdc/sdc-sdc-tosca.yaml
+++ b/jjb/sdc/sdc-sdc-tosca.yaml
@@ -29,5 +29,6 @@
     project-name: 'sdc-sdc-tosca'
     branch: 'master'
     mvn-settings: 'sdc-sdc-tosca-settings'
+    mvn-params: '-Dsonar.branch.name=${GERRIT_BRANCH}'
     mvn-goals: 'clean install'
-    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    mvn-opts: '-Xmx1024m'
