Use sudo for docker-compose
Use sudo while trying to change permisisons on
docker-compose.

Change-Id: Ia52bfcd375a041b6ec3faac30faac2f243db5e6f
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -19,6 +19,7 @@
     - file:
         path: /usr/local/bin/docker-compose
         mode: "+x"
+      become: true
 
     - name: 'Install GoLang {{golang_version}}'
       block:
