Update queue docker node
Update docker queue node with the latest docker
image.

Change-Id: I2251aa9621ea1e39a1f9e0258eca47b8598072c0
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jenkins-config/clouds/openstack/cattle/queue-docker-4c-4g.cfg
+++ b/jenkins-config/clouds/openstack/cattle/queue-docker-4c-4g.cfg
@@ -1,4 +1,4 @@
-IMAGE_NAME=Ubuntu 16.04 - docker - 20180101-1003
+IMAGE_NAME=ZZCI - Ubuntu 16.04 - docker - x86_64 - 20180813-212616.934
 LABELS=queue-docker-4c-4g
 HARDWARE_ID=v2-highcpu-4
 INSTANCE_CAP=1
