Fix docker-compose URL
The previous URL downloads the HTML and not the executable.
Need to translate 'uname -s' and 'uname -m'.

Change-Id: I95c4c993bee1a9f12d20004c4b09934bd8620e54
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/packer/provision/local-docker.yaml
+++ b/packer/provision/local-docker.yaml
@@ -13,7 +13,7 @@
 
   tasks:
     - name: 'Install Docker Compose {{docker_compose_version}}'
-      command: curl -o /usr/local/bin/docker-compose -L "https://github.com/docker/compose/releases/download/{{docker_compose_version}}/docker-compose-$(uname -s)-$(uname -m)"
+      command: curl -o /usr/local/bin/docker-compose -L "https://github.com/docker/compose/releases/download/{{docker_compose_version}}/docker-compose-Linux-x86_64"
       become: true
 
     - file:
