Creates a job to nightly build sshsm docker images
Adds a wrapper script to triggers the script to
build base images

Change-Id: I0b1b1899f43b7d54852d93a2220da0e138c99a58
Issue-ID: AAF-430
Signed-off-by: Manjunath Ranganathaiah <manjunath.ranganathaiah@intel.com>

--- a/jjb/aaf/aaf-sshsm.yaml
+++ b/jjb/aaf/aaf-sshsm.yaml
@@ -9,6 +9,9 @@
       - '{project-name}-{stream}-verify-c':
          script:
             !include-raw-escape: 'build-sshsm.sh'
+      - '{project-name}-{stream}-docker-c-shell-daily':
+         script:
+            !include-raw-escape: 'build-sshsm-base-images.sh'
     stream:
       - 'master':
           branch: 'master'
