Support dcaegen2/collectors/hv-ves docker push
Add a build job which will run docker push by means of Maven definition
in HV-VES Collector.

Change-Id: I7a870d04ef475474d2d62fc55d4ed7def556f59a
Signed-off-by: Piotr Jaszczyk <piotr.jaszczyk@nokia.com>
Issue-ID: DCAEGEN2-653

--- a/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
@@ -16,11 +16,16 @@
     build-node: ubuntu1604-docker-8c-8g
     jobs:
       - gerrit-maven-clm
-      - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-verify-java':
           mvn-goals: 'clean install'
       - '{project-name}-{stream}-merge-java':
           mvn-goals: 'clean deploy'
+      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-docker-java-shell-daily':
+          mvn-goals: 'clean deploy -DskipDockerPush=false'
+          # No-op
+          script: '/bin/true'
+
 - project:
     name: dcaegen2-collectors-hv-ves-sonar
     jobs:
