Update SDC sonar jjb
Removed old style Jave memory definitions.

Fix incorrect sonar property definition. change sonar.branch.name to sonar.branch,
Since the currant sonar version does not support the sonar.branch.name property.

Change-Id: I79f417fe41de3599f65d54013ac2aceed79bef31
Issue-ID: SDC-1632
Signed-off-by: Michael Lando <ml636r@att.com>

--- a/jjb/sdc/sdc-jtosca.yaml
+++ b/jjb/sdc/sdc-jtosca.yaml
@@ -29,6 +29,6 @@
     project-name: 'sdc-jtosca'
     branch: 'master'
     mvn-settings: 'sdc-jtosca-settings'
-    mvn-params: '-Dsonar.branch.name=${branch}'
+    mvn-params: '-Dsonar.branch=${branch}'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m'
