--- a/jjb/sdc/sdc-dcae-d-dt-be-property.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt-be-property.yaml
@@ -26,5 +26,6 @@
     project-name: 'sdc-dcae-d-dt-be-property'
     branch: 'master'
     mvn-settings: 'sdc-dcae-d-dt-be-property-settings'
+    mvn-params: '-Dsonar.branch=${branch}'
     mvn-goals: 'clean install'
-    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    mvn-opts: '-Xmx1024m'
