--- a/jjb/sdc/sdc-dcae-d-dt.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt.yaml
@@ -31,5 +31,6 @@
     project-name: 'sdc-dcae-d-dt'
     branch: 'master'
     mvn-settings: 'sdc-dcae-d-dt-settings'
+    mvn-params: '-Dsonar.branch=${branch}'
     mvn-goals: 'clean install'
-    mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+    mvn-opts: '-Xmx1024m'
