--- a/jjb/sdc/sdc-sdc-distribution-client.yaml
+++ b/jjb/sdc/sdc-sdc-distribution-client.yaml
@@ -29,6 +29,6 @@
     project-name: 'sdc-sdc-distribution-client'
     branch: 'master'
     mvn-settings: 'sdc-sdc-distribution-client-settings'
-    mvn-params: '-Dsonar.branch.name=${branch}'
+    mvn-params: '-Dsonar.branch=${branch}'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m'
