Add CSIT triggers for HV-VES collector
Issue-ID: DCAEGEN2-716
Change-Id: Iefcfa8118643132995f7e209ed7d5ebb7d5ad29d
Signed-off-by: Lusheng Ji <lji@research.att.com>

--- a/jjb/dcaegen2/dcaegen2-csit.yaml
+++ b/jjb/dcaegen2/dcaegen2-csit.yaml
@@ -16,4 +16,8 @@
           trigger_jobs:
             - 'dcaegen2-master-merge-java'
             - 'dcaegen2-services-prh-master-merge-java'
+      - 'hv-ves-testsuites':
+          trigger_jobs:
+            - 'dcaegen2-collectors-hv-ves-master-merge-java'
+    robot-options: ''
     robot-options: ''
