Skip docker for dcaegen2/collectors/hv-ves sonar
Sonar build can be ran on non-docker VM but it should skip all
Docker-related goals.

Change-Id: I4b9db99a5f09cbcbd8847bb4962e30188f830b28
Issue-ID: DCAEGEN2-719
Signed-off-by: Piotr Jaszczyk <piotr.jaszczyk@nokia.com>

--- a/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
@@ -36,5 +36,5 @@
     project-name: 'dcaegen2-collectors-hv-ves'
     branch: 'master'
     mvn-settings: 'dcaegen2-collectors-hv-ves-settings'
-    mvn-goals: 'clean install'
+    mvn-goals: 'clean install -DskipDocker'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
