Change project name for csit
Change-Id: Ib21134282711681a2b8930c424dc635b989a5573
Issue-ID: MULTICLOUD-276
Signed-off-by: Huang Haibin <haibin.huang@intel.com>

--- a/jjb/multicloud/multicloud-openstack-pike-csit.yaml
+++ b/jjb/multicloud/multicloud-openstack-pike-csit.yaml
@@ -4,7 +4,7 @@
     jobs:
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
-    project-name: 'multicloud-openstack-pike'
+    project-name: 'multicloud-pike'
     stream: 'master'
     functionality:
       - 'functionality1':
